library/fdk-aac-rs/fdk-aac-sys/aac/libAACenc/include/aacenc_lib.h


typedef enum {
  AACENC_OK = 0x0000, 
  AACENC_INVALID_HANDLE =
      0x0020, 
  AACENC_MEMORY_ERROR = 0x0021,          
  AACENC_UNSUPPORTED_PARAMETER = 0x0022, 
  AACENC_INVALID_CONFIG = 0x0023,        
  AACENC_INIT_ERROR = 0x0040,     
  AACENC_INIT_AAC_ERROR = 0x0041, 
  AACENC_INIT_SBR_ERROR = 0x0042, 
  AACENC_INIT_TP_ERROR = 0x0043, 
  AACENC_INIT_META_ERROR =
      0x0044, 
  AACENC_INIT_MPS_ERROR = 0x0045, 
  AACENC_ENCODE_ERROR = 0x0060, 
  AACENC_ENCODE_EOF = 0x0080 
} AACENC_ERROR;
typedef struct AACENCODER *HANDLE_AACENCODER;
typedef struct {
  INT numBufs;            
  void **bufs;            
  INT *bufferIdentifiers; 
  INT *bufSizes;          
  INT *bufElSizes;        
} AACENC_BufDesc;
typedef struct {
  INT numInSamples; 
  INT numAncBytes;  
} AACENC_InArgs;
typedef struct {
  INT numOutBytes;  
  INT numInSamples; 
  INT numAncBytes;  
  INT bitResState;  
} AACENC_OutArgs;
typedef enum {
  AACENC_METADATA_DRC_NONE = 0,          
  AACENC_METADATA_DRC_FILMSTANDARD = 1,  
  AACENC_METADATA_DRC_FILMLIGHT = 2,     
  AACENC_METADATA_DRC_MUSICSTANDARD = 3, 
  AACENC_METADATA_DRC_MUSICLIGHT = 4,    
  AACENC_METADATA_DRC_SPEECH = 5,        
  AACENC_METADATA_DRC_NOT_PRESENT =
      256 
} AACENC_METADATA_DRC_PROFILE;
typedef struct {
  AACENC_METADATA_DRC_PROFILE
  drc_profile; 
  AACENC_METADATA_DRC_PROFILE
  comp_profile; 
  INT drc_TargetRefLevel;  
  INT comp_TargetRefLevel; 
  INT prog_ref_level_present; 
  INT prog_ref_level;         
  UCHAR PCE_mixdown_idx_present; 
  UCHAR ETSI_DmxLvl_present;     
  SCHAR centerMixLevel; 
  SCHAR surroundMixLevel; 
  UCHAR
  dolbySurroundMode; 
  UCHAR drcPresentationMode; 
  struct {
    UCHAR extAncDataEnable; 
    UCHAR
    extDownmixLevelEnable;   
    UCHAR extDownmixLevel_A; 
    UCHAR extDownmixLevel_B; 
    UCHAR dmxGainEnable; 
    INT dmxGain5;        
    INT dmxGain2;        
    UCHAR lfeDmxEnable; 
    UCHAR lfeDmxLevel;  
  } ExtMetaData;
} AACENC_MetaData;
typedef enum {
  AACENC_INIT_NONE = 0x0000, 
  AACENC_INIT_CONFIG =
      0x0001, 
  AACENC_INIT_STATES = 0x0002, 
  AACENC_INIT_TRANSPORT =
      0x1000, 
  AACENC_RESET_INBUFFER =
      0x2000,              
  AACENC_INIT_ALL = 0xFFFF 
} AACENC_CTRLFLAGS;
typedef enum {
  AACENC_AOT =
      0x0100, 
  AACENC_BITRATE = 0x0101, 
  AACENC_BITRATEMODE = 0x0102, 
  AACENC_SAMPLERATE = 0x0103, 
  AACENC_SBR_MODE = 0x0104, 
  AACENC_GRANULE_LENGTH =
      0x0105, 
  AACENC_CHANNELMODE = 0x0106, 
  AACENC_CHANNELORDER =
      0x0107, 
  AACENC_SBR_RATIO =
      0x0108, 
  AACENC_AFTERBURNER =
      0x0200, 
  AACENC_BANDWIDTH = 0x0203, 
  AACENC_PEAK_BITRATE =
      0x0207, 
  AACENC_TRANSMUX = 0x0300, 
  AACENC_HEADER_PERIOD =
      0x0301, 
  AACENC_SIGNALING_MODE =
      0x0302, 
  AACENC_TPSUBFRAMES =
      0x0303, 
  AACENC_AUDIOMUXVER =
      0x0304, 
  AACENC_PROTECTION = 0x0306, 
  AACENC_ANCILLARY_BITRATE =
      0x0500, 
  AACENC_METADATA_MODE = 0x0600, 
  AACENC_CONTROL_STATE =
      0xFF00, 
  AACENC_NONE = 0xFFFF 
} AACENC_PARAM;
AACENC_ERROR aacEncOpen(HANDLE_AACENCODER *phAacEncoder, const UINT encModules,
                        const UINT maxChannels);
AACENC_ERROR aacEncClose(HANDLE_AACENCODER *phAacEncoder);
AACENC_ERROR aacEncEncode(const HANDLE_AACENCODER hAacEncoder,
                          const AACENC_BufDesc *inBufDesc,
                          const AACENC_BufDesc *outBufDesc,
                          const AACENC_InArgs *inargs, AACENC_OutArgs *outargs);
AACENC_ERROR aacEncoder_SetParam(const HANDLE_AACENCODER hAacEncoder,
                                 const AACENC_PARAM param, const UINT value);
UINT aacEncoder_GetParam(const HANDLE_AACENCODER hAacEncoder,
                         const AACENC_PARAM param);