library/fdk-aac-rs/fdk-aac-sys/src/bindings.rs

#[doc = "< Do not trigger initialization."]
pub const AACENC_CTRLFLAGS_AACENC_INIT_NONE: AACENC_CTRLFLAGS = 0;
pub const AACENC_CTRLFLAGS_AACENC_INIT_CONFIG: AACENC_CTRLFLAGS = 1;
#[doc = "< Reset all encoder modules history buffer."]
pub const AACENC_CTRLFLAGS_AACENC_INIT_STATES: AACENC_CTRLFLAGS = 2;
pub const AACENC_CTRLFLAGS_AACENC_INIT_TRANSPORT: AACENC_CTRLFLAGS = 4096;
pub const AACENC_CTRLFLAGS_AACENC_RESET_INBUFFER: AACENC_CTRLFLAGS = 8192;
#[doc = "< Initialize all."]
pub const AACENC_CTRLFLAGS_AACENC_INIT_ALL: AACENC_CTRLFLAGS = 65535;
#[doc = " AAC encoder control flags."]
#[doc = ""]
#[doc = " In interaction with the ::AACENC_CONTROL_STATE parameter it is possible to"]
#[doc = " get information about the internal initialization process. It is also"]
#[doc = " possible to overwrite the internal state from extern when necessary."]
pub type AACENC_CTRLFLAGS = u32;
pub const AACENC_PARAM_AACENC_AOT: AACENC_PARAM = 256;
#[doc = "< Total encoder bitrate. This parameter is"]
#[doc = "mandatory and interacts with ::AACENC_BITRATEMODE."]
#[doc = "- CBR: Bitrate in bits/second."]
#[doc = "- VBR: Variable bitrate. Bitrate argument will"]
#[doc = "be ignored. See \\ref suppBitrates for details."]
pub const AACENC_PARAM_AACENC_BITRATE: AACENC_PARAM = 257;
#[doc = "< Bitrate mode. Configuration can be different"]
#[doc = "kind of bitrate configurations:"]
#[doc = "- 0: Constant bitrate, use bitrate according"]
#[doc = "to ::AACENC_BITRATE. (default) Within none"]
#[doc = "LD/ELD ::AUDIO_OBJECT_TYPE, the CBR mode makes"]
#[doc = "use of full allowed bitreservoir. In contrast,"]
#[doc = "at Low-Delay ::AUDIO_OBJECT_TYPE the"]
#[doc = "bitreservoir is kept very small."]
#[doc = "- 1: Variable bitrate mode, \\ref vbrmode"]
#[doc = "\"very low bitrate\"."]
#[doc = "- 2: Variable bitrate mode, \\ref vbrmode"]
#[doc = "\"low bitrate\"."]
#[doc = "- 3: Variable bitrate mode, \\ref vbrmode"]
#[doc = "\"medium bitrate\"."]
#[doc = "- 4: Variable bitrate mode, \\ref vbrmode"]
#[doc = "\"high bitrate\"."]
#[doc = "- 5: Variable bitrate mode, \\ref vbrmode"]
#[doc = "\"very high bitrate\"."]
pub const AACENC_PARAM_AACENC_BITRATEMODE: AACENC_PARAM = 258;
#[doc = "< Audio input data sampling rate. Encoder"]
#[doc = "supports following sampling rates: 8000, 11025,"]
#[doc = "12000, 16000, 22050, 24000, 32000, 44100,"]
#[doc = "48000, 64000, 88200, 96000"]
pub const AACENC_PARAM_AACENC_SAMPLERATE: AACENC_PARAM = 259;
#[doc = "< Configure SBR independently of the chosen Audio"]
#[doc = "Object Type ::AUDIO_OBJECT_TYPE. This parameter"]
#[doc = "is for ELD audio object type only."]
#[doc = "- -1: Use ELD SBR auto configurator (default)."]
#[doc = "- 0: Disable Spectral Band Replication."]
#[doc = "- 1: Enable Spectral Band Replication."]
pub const AACENC_PARAM_AACENC_SBR_MODE: AACENC_PARAM = 260;
pub const AACENC_PARAM_AACENC_GRANULE_LENGTH: AACENC_PARAM = 261;
#[doc = "< Set explicit channel mode. Channel mode must"]
#[doc = "match with number of input channels."]
#[doc = "- 1-7, 11,12,14 and 33,34: MPEG channel"]
#[doc = "modes supported, see ::CHANNEL_MODE in"]
#[doc = "FDK_audio.h."]
pub const AACENC_PARAM_AACENC_CHANNELMODE: AACENC_PARAM = 262;
pub const AACENC_PARAM_AACENC_CHANNELORDER: AACENC_PARAM = 263;
pub const AACENC_PARAM_AACENC_SBR_RATIO: AACENC_PARAM = 264;
pub const AACENC_PARAM_AACENC_AFTERBURNER: AACENC_PARAM = 512;
#[doc = "< Core encoder audio bandwidth:"]
#[doc = "- 0: Determine audio bandwidth internally"]
#[doc = "(default, see chapter \\ref BEHAVIOUR_BANDWIDTH)."]
#[doc = "- 1 to fs/2: Audio bandwidth in Hertz. Limited"]
#[doc = "to 20kHz max. Not usable if SBR is active. This"]
#[doc = "setting is for experts only, better do not touch"]
#[doc = "this value to avoid degraded audio quality."]
pub const AACENC_PARAM_AACENC_BANDWIDTH: AACENC_PARAM = 515;
pub const AACENC_PARAM_AACENC_PEAK_BITRATE: AACENC_PARAM = 519;
#[doc = "< Transport type to be used. See ::TRANSPORT_TYPE"]
#[doc = "in FDK_audio.h. Following types can be configured"]
#[doc = "in encoder library:"]
#[doc = "- 0: raw access units"]
#[doc = "- 1: ADIF bitstream format"]
#[doc = "- 2: ADTS bitstream format"]
#[doc = "- 6: Audio Mux Elements (LATM) with"]
#[doc = "muxConfigPresent = 1"]
#[doc = "- 7: Audio Mux Elements (LATM) with"]
#[doc = "muxConfigPresent = 0, out of band StreamMuxConfig"]
#[doc = "- 10: Audio Sync Stream (LOAS)"]
pub const AACENC_PARAM_AACENC_TRANSMUX: AACENC_PARAM = 768;
pub const AACENC_PARAM_AACENC_HEADER_PERIOD: AACENC_PARAM = 769;
pub const AACENC_PARAM_AACENC_SIGNALING_MODE: AACENC_PARAM = 770;
pub const AACENC_PARAM_AACENC_TPSUBFRAMES: AACENC_PARAM = 771;
pub const AACENC_PARAM_AACENC_AUDIOMUXVER: AACENC_PARAM = 772;
#[doc = "< Configure protection in transport layer:"]
#[doc = "- 0: No protection. (default)"]
#[doc = "- 1: CRC active for ADTS transport format."]
pub const AACENC_PARAM_AACENC_PROTECTION: AACENC_PARAM = 774;
pub const AACENC_PARAM_AACENC_ANCILLARY_BITRATE: AACENC_PARAM = 1280;
#[doc = "< Configure Meta Data. See ::AACENC_MetaData"]
#[doc = "for further details:"]
#[doc = "- 0: Do not embed any metadata."]
#[doc = "- 1: Embed dynamic_range_info metadata."]
#[doc = "- 2: Embed dynamic_range_info and"]
#[doc = "ancillary_data metadata."]
#[doc = "- 3: Embed ancillary_data metadata."]
pub const AACENC_PARAM_AACENC_METADATA_MODE: AACENC_PARAM = 1536;
pub const AACENC_PARAM_AACENC_CONTROL_STATE: AACENC_PARAM = 65280;
#[doc = "< ------"]
pub const AACENC_PARAM_AACENC_NONE: AACENC_PARAM = 65535;
#[doc = " \\brief  AAC encoder setting parameters."]
#[doc = ""]
#[doc = " Use aacEncoder_SetParam() function to configure, or use aacEncoder_GetParam()"]
#[doc = " function to read the internal status of the following parameters."]
pub type AACENC_PARAM = u32;
extern "C" {
    #[doc = " \\brief  Open an instance of the encoder."]
    #[doc = ""]
    #[doc = " Allocate memory for an encoder instance with a functional range denoted by"]
    #[doc = " the function parameters. Preinitialize encoder instance with default"]
    #[doc = " configuration."]
    #[doc = ""]
    #[doc = " \\param phAacEncoder  A pointer to an encoder handle. Initialized on return."]
    #[doc = " \\param encModules    Specify encoder modules to be supported in this encoder"]
    #[doc = " instance:"]
    #[doc = "                      - 0x0: Allocate memory for all available encoder"]
    #[doc = " modules."]
    #[doc = "                      - else: Select memory allocation regarding encoder"]
    #[doc = " modules. Following flags are possible and can be combined."]
    #[doc = "                              - 0x01: AAC module."]
    #[doc = "                              - 0x02: SBR module."]
    #[doc = "                              - 0x04: PS module."]
    #[doc = "                              - 0x08: MPS module."]
    #[doc = "                              - 0x10: Metadata module."]
    #[doc = "                              - example: (0x01|0x02|0x04|0x08|0x10) allocates"]
    #[doc = " all modules and is equivalent to default configuration denotet by 0x0."]
    #[doc = " \\param maxChannels   Number of channels to be allocated. This parameter can"]
    #[doc = " be used in different ways:"]
    #[doc = "                      - 0: Allocate maximum number of AAC and SBR channels as"]
    #[doc = " supported by the library."]
    #[doc = "                      - nChannels: Use same maximum number of channels for"]
    #[doc = " allocating memory in AAC and SBR module."]
    #[doc = "                      - nChannels | (nSbrCh<<8): Number of SBR channels can be"]
    #[doc = " different to AAC channels to save data memory."]
    #[doc = ""]
    #[doc = " \\return"]
    #[doc = "          - AACENC_OK, on succes."]
    #[doc = "          - AACENC_INVALID_HANDLE, AACENC_MEMORY_ERROR, AACENC_INVALID_CONFIG,"]
    #[doc = " on failure."]
    pub fn aacEncOpen(
        phAacEncoder: *mut HANDLE_AACENCODER,
        encModules: UINT,
        maxChannels: UINT,
    ) -> AACENC_ERROR;
}
extern "C" {
    #[doc = " \\brief  Close the encoder instance."]
    #[doc = ""]
    #[doc = " Deallocate encoder instance and free whole memory."]
    #[doc = ""]
    #[doc = " \\param phAacEncoder  Pointer to the encoder handle to be deallocated."]
    #[doc = ""]
    #[doc = " \\return"]
    #[doc = "          - AACENC_OK, on success."]
    #[doc = "          - AACENC_INVALID_HANDLE, on failure."]
    pub fn aacEncClose(phAacEncoder: *mut HANDLE_AACENCODER) -> AACENC_ERROR;
}
extern "C" {
    #[doc = " \\brief Encode audio data."]
    #[doc = ""]
    #[doc = " This function is mainly for encoding audio data. In addition the function can"]
    #[doc = " be used for an encoder (re)configuration process."]
    #[doc = " - PCM input data will be retrieved from external input buffer until the fill"]
    #[doc = " level allows encoding a single frame. This functionality allows an external"]
    #[doc = " buffer with reduced size in comparison to the AAC or HE-AAC audio frame"]
    #[doc = " length."]
    #[doc = " - If the value of the input samples argument is zero, just internal"]
    #[doc = " reinitialization will be applied if it is requested."]
    #[doc = " - At the end of a file the flushing process can be triggerd via setting the"]
    #[doc = " value of the input samples argument to -1. The encoder delay lines are fully"]
    #[doc = " flushed when the encoder returns no valid bitstream data"]
    #[doc = " AACENC_OutArgs::numOutBytes. Furthermore the end of file is signaled by the"]
    #[doc = " return value AACENC_ENCODE_EOF."]
    #[doc = " - If an error occured in the previous frame or any of the encoder parameters"]
    #[doc = " changed, an internal reinitialization process will be applied before encoding"]
    #[doc = " the incoming audio samples."]
    #[doc = " - The function can also be used for an independent reconfiguration process"]
    #[doc = " without encoding. The first parameter has to be a valid encoder handle and"]
    #[doc = " all other parameters can be set to NULL."]
    #[doc = " - If the size of the external bitbuffer in outBufDesc is not sufficient for"]
    #[doc = " writing the whole bitstream, an internal error will be the return value and a"]
    #[doc = " reconfiguration will be triggered."]
    #[doc = ""]
    #[doc = " \\param hAacEncoder           A valid AAC encoder handle."]
    #[doc = " \\param inBufDesc             Input buffer descriptor, see AACENC_BufDesc:"]
    #[doc = "                              - At least one input buffer with audio data is"]
    #[doc = " expected."]
    #[doc = "                              - Optionally a second input buffer with"]
    #[doc = " ancillary data can be fed."]
    #[doc = " \\param outBufDesc            Output buffer descriptor, see AACENC_BufDesc:"]
    #[doc = "                              - Provide one output buffer for the encoded"]
    #[doc = " bitstream."]
    #[doc = " \\param inargs                Input arguments, see AACENC_InArgs."]
    #[doc = " \\param outargs               Output arguments, AACENC_OutArgs."]
    #[doc = ""]
    #[doc = " \\return"]
    #[doc = "          - AACENC_OK, on success."]
    #[doc = "          - AACENC_INVALID_HANDLE, AACENC_ENCODE_ERROR, on failure in encoding"]
    #[doc = " process."]
    #[doc = "          - AACENC_INVALID_CONFIG, AACENC_INIT_ERROR, AACENC_INIT_AAC_ERROR,"]
    #[doc = " AACENC_INIT_SBR_ERROR, AACENC_INIT_TP_ERROR, AACENC_INIT_META_ERROR,"]
    #[doc = " AACENC_INIT_MPS_ERROR, on failure in encoder initialization."]
    #[doc = "          - AACENC_UNSUPPORTED_PARAMETER, on incorrect input or output buffer"]
    #[doc = " descriptor initialization."]
    #[doc = "          - AACENC_ENCODE_EOF, when flushing fully concluded."]
    pub fn aacEncEncode(
        hAacEncoder: HANDLE_AACENCODER,
        inBufDesc: *const AACENC_BufDesc,
        outBufDesc: *const AACENC_BufDesc,
        inargs: *const AACENC_InArgs,
        outargs: *mut AACENC_OutArgs,
    ) -> AACENC_ERROR;
}
